# linux-resource-monitor-no-npm

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUILD.md  CMakePresets.json  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  PRODUCTIZATION_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  nginx.conf
.github/workflows/: ci-cd.yml
backend/: CMakeLists.txt
backend/src/: Config.cpp  Config.hpp  Logger.cpp  Logger.hpp  ProcessResourceMonitor.cpp  ProcessResourceMonitor.hpp  ResourceMonitorApplication.cpp  ResourceWebSocketServer.cpp  ResourceWebSocketServer.hpp  SystemResourceMonitor.cpp  SystemResourceMonitor.hpp
frontend/: README.md  app.js  index.html  styles.css
frontend/src/: main.ts
scripts/: build.sh  deploy-docker.sh
